--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   	<style type="text/css">
   		body {
 		    line-height: 1.6;
-		    color: #444;
+		    color: green; 
+		    background: black
 		}
 		h1 {
-			font-size: 18px;
+			font-size: 10px;
 		    font-family: monospace;
     		white-space: pre;
 		}
